<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.av.youeat</groupId>
	<artifactId>youeat</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>YouEat</name>
	<description>Wiki and social network to share food experiences</description>
	<url>http://code.google.com/p/youeat</url>
	<ciManagement>
		<system>Hudson</system>
		<url>http://www.youeat.org:8080/hudson/</url>
	</ciManagement>
	<developers>
		<developer>
			<id>a.vincelli</id>
			<name>Alessandro Vincelli</name>
			<email>a.vincelli@gmail.com</email>
			<url>http://www.alessandro.vincelli.name/</url>
			<organization>Foundation ICTU</organization>
			<organizationUrl>http://www.ictu.nl</organizationUrl>
			<timezone>+1</timezone>
			<roles>
			</roles>
		</developer>
	</developers>
	<organization>
		<name>Alessandro Vincelli</name>
		<url>http://www.alessandro.vincelli.name</url>
	</organization>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<profiles>
		<profile>
			<id>development</id>
			<activation>
				<activeByDefault>true</activeByDefault>
				<property>
					<name>env</name>
					<value>development</value>
				</property>
				<file>
				</file>
			</activation>
			<build>
				<resources>
				</resources>
			</build>
			<properties>
				<wicketApplication.configurationType>development</wicketApplication.configurationType>
				<springPropertiesLocation>file:/etc/properties/youeat.properties</springPropertiesLocation>
			</properties>
		</profile>
		<profile>
			<id>ci</id>
			<activation>
				<property>
					<name>env</name>
					<value>ci</value>
				</property>
				<file>
				</file>
			</activation>
			<build>
			</build>
			<properties>
				<wicketApplication.configurationType>deployment</wicketApplication.configurationType>
				<springPropertiesLocation>file:/etc/properties/youeat-ci.properties</springPropertiesLocation>
			</properties>
		</profile>
		<profile>
			<id>deployment</id>
			<activation>
				<property>
					<name>env</name>
					<value>deployment</value>
				</property>
				<file>
				</file>
			</activation>
			<build>
			</build>
			<properties>
				<wicketApplication.configurationType>deployment</wicketApplication.configurationType>
				<springPropertiesLocation>file:/etc/properties/youeat.properties</springPropertiesLocation>
			</properties>
		</profile>
	</profiles>
	<repositories>
		<repository>
			<id>wicket-snaps</id>
			<url>http://wicketstuff.org/maven/repository</url>
		</repository>
		<repository>
  			<id>maven2-repository.dev.java.net</id>
  			<name>Java.net Repository for Maven</name>
  			<url>http://download.java.net/maven/2/</url>
  			<layout>default</layout>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.release</id>
			<name>SpringSource Enterprise Bundle Repository - SpringSource Releases</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
	</repositories>
	<dependencies>
		<!--  WICKET DEPENDENCIES -->
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket</artifactId>
			<version>${wicket.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket-extensions</artifactId>
			<version>${wicket.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket-spring</artifactId>
			<version>${wicket.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket-datetime</artifactId>
			<version>${wicket.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.wicket</groupId>
			<artifactId>wicket-auth-roles</artifactId>
			<version>${wicket.version}</version>
		</dependency>
		<dependency>
        	<groupId>org.wicketstuff</groupId>
        	<artifactId>gmap2</artifactId>
        	<version>1.4.1</version>
    	</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.5.10</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.5.10</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.7</version>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-util</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-management</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
		 	<artifactId>easymockclassextension</artifactId>
		 	<version>2.4</version>
		 	<scope>test</scope>
		 </dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>javax.transaction</groupId>
			<artifactId>jta</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>3.3.2.GA</version>
		</dependency>
		<dependency>
		   <groupId>org.hibernate</groupId>
		   <artifactId>hibernate-annotations</artifactId>
		   <version>3.4.0.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-c3p0</artifactId>
			<version>3.3.2.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-proxool</artifactId>
			<version>3.3.2.GA</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-search</artifactId>
			<version>3.1.0.GA</version>
		</dependency>
		<dependency>
		   <groupId>org.hibernate</groupId>
		   <artifactId>hibernate-entitymanager</artifactId>
		   <version>3.4.0.GA</version>
		</dependency>
		<dependency>
   			<groupId>org.apache.solr</groupId>
		   <artifactId>solr-common</artifactId>
		   <version>1.3.0</version>
		</dependency>
		<dependency>
		   <groupId>org.apache.solr</groupId>
		   <artifactId>solr-core</artifactId>
		   <version>1.3.0</version>
		</dependency>
		<dependency>
		   <groupId>org.apache.lucene</groupId>
		   <artifactId>lucene-snowball</artifactId>
		   <version>2.9.0</version>
		</dependency>
		<dependency>
		   <groupId>org.apache.lucene</groupId>
		   <artifactId>lucene-core</artifactId>
		   <version>2.9.0</version>
		</dependency>
		<dependency>
			<groupId>javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.8.0.GA</version>
		</dependency>
		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>8.4-701.jdbc4</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>3.0.1.RELEASE</version>
			<exclusions>
				<exclusion>
					<artifactId>spring-support</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>3.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>3.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aop</artifactId>
			<version>3.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>3.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>3.0.0.RELEASE</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.integration</groupId>
			<artifactId>spring-integration-mail</artifactId>
			<version>1.0.3.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>3.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>3.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.6.6</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.6.6</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>3.0.0.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.facebookapi</groupId>
			<artifactId>facebook-java-api</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.facebookapi</groupId>
			<artifactId>facebook-java-api-schema</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.facebookapi</groupId>
			<artifactId>facebook-java-api-annotation-processor</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.wicketstuff</groupId>
			<artifactId>scriptaculous</artifactId>
			<version>1.4.1</version>
		</dependency>   
		<!-- SPRING -->
		
		<!-- LOGGING DEPENDENCIES - LOG4J -->

		<!--  JUNIT DEPENDENCY FOR TESTING -->

		<!--  JETTY DEPENDENCIES FOR TESTING  -->
		<!-- SPRING -->
	</dependencies>
	<dependencyManagement>
		<dependencies>
		</dependencies>
	</dependencyManagement>
	<scm>
	</scm>
	<build>
		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/BookDAOTest.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<optimise>true</optimise>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<configuration>
					<contextPath>/</contextPath>
					<!--<scanIntervalSeconds>6</scanIntervalSeconds>
					--><connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>8889</port>
							<maxIdleTime>30000</maxIdleTime>
						</connector>
					</connectors>
					<systemProperties>
						<systemProperty>
							<name>JAVA_OPTS</name>
							<value>-Xms256m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=256m -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</value>
						</systemProperty>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<additionalProjectnatures>
						<projectnature>wicketbench.wicketnature</projectnature>
					</additionalProjectnatures>
					<additionalBuildcommands>
						<buildcommand>wicketbench.associatedMarkupAuditor</buildcommand>
					</additionalBuildcommands>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.cargo</groupId>
				<artifactId>cargo-maven2-plugin</artifactId>
				<version>1.0-beta-2</version>
					<configuration>
					<container>
						<containerId>tomcat6x</containerId>
						<type>remote</type>
					</container>
					<configuration>
						<type>runtime</type>
						<properties>
							<cargo.tomcat.manager.url>http://localhost:8092/manager</cargo.tomcat.manager.url>
							<cargo.remote.username>username</cargo.remote.username>
							<cargo.remote.password>password</cargo.remote.password>
						</properties>
					</configuration>
					<deployer>
						<type>remote</type>
						<deployables>
							<deployable>
								<properties>
									<context>/</context>
								</properties>
							</deployable>
						</deployables>
					</deployer>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.code.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.4.0</version>
				<configuration>
					<header>header.txt</header>
					<aggregate>true</aggregate>
					<encoding>UTF-8</encoding>
					<includes>
						<include>**/*.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>hibernate3-maven-plugin</artifactId>
				<version>2.2</version>
				<!-- the goal is: hbm2ddl -->
				<configuration>
					<components>
						<component>
							<name>hbm2ddl</name>
							<implementation>jpaconfiguration</implementation>
						</component>
					</components>
					<componentProperties>
						<persistenceunit>mainPersistance</persistenceunit>
						<outputfilename>youeat-schema.ddl</outputfilename>
						<drop>false</drop>
						<create>true</create>
						<export>false</export>
						<format>true</format>
						<jdk5>true</jdk5>
						<ejb3>true</ejb3>
					</componentProperties>
				</configuration>
			</plugin>
			<plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
                  <enableAssertions>false</enableAssertions>
               </configuration>
            </plugin>
		</plugins>
	</build>	
	<reporting>
	    <plugins>
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-project-info-reports-plugin</artifactId>
	        <configuration>
	          <webAccessUrl>https://youeat.googlecode.com/svn/trunk</webAccessUrl>
	          <anonymousConnection>scm:svn:https://youeat.googlecode.com/svn/trunk</anonymousConnection>
	          <developerConnection>scm:svn:https://youeat.googlecode.com/svn/trunk</developerConnection>
	        </configuration>
	      </plugin>
	      <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-javadoc-plugin</artifactId>
			<version>2.5</version>
			<reportSets>
				<reportSet>
					<id>html</id>
					<configuration>
						<doctitle>${project.name} ${project.version} API</doctitle>
						<windowtitle>${project.name} ${project.version} API</windowtitle>
					</configuration>
					<reports>
						<report>javadoc</report>
					</reports>
				</reportSet>
				<reportSet>
					<id>test-html</id>
					<configuration>
						<testDoctitle>${project.name} ${project.version} Test API</testDoctitle>
						<testWindowtitle>${project.name} ${project.version} Test API</testWindowtitle>
					</configuration>
					<reports>
						<report>test-javadoc</report>
					</reports>
				</reportSet>
			</reportSets>
			</plugin>
	    </plugins>
  	</reporting>
	<properties>
		<wicket.version>1.4.6</wicket.version>
		<jetty.version>6.1.4</jetty.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>
